--- a/reactive-pizza/docker/docker-compose.yml
+++ b/reactive-pizza/docker/docker-compose.yml
@@ -15,10 +15,15 @@ services:
 
   kafka-pizza:
     image: wurstmeister/kafka
-    ports:
-      - "9092:9092"
+    ports: [ "9094:9094" ]
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: 192.168.1.46
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-pizza:2181
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_OPTS: -Xms128m -Xmx256m
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://localhost:9094
+      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
+      KAFKA_ADVERTISED_HOSTNAME: INSIDE
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
