--- a/reactive-pizza/docker/docker-compose.yml
+++ b/reactive-pizza/docker/docker-compose.yml
@@ -7,23 +7,32 @@ services:
       discovery.type: single-node
     ports:
       - 9200:9200
+    networks:
+      - misis-local
 
-  zookeeper-pizza:
+  zookeeper:
     image: wurstmeister/zookeeper
     ports:
       - "2181:2181"
+    networks:
+      - misis-local
 
-  kafka-pizza:
+  kafka:
     image: wurstmeister/kafka
-    ports: [ "9094:9094" ]
+    ports:
+      - 9094:9094
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_OPTS: -Xms128m -Xmx256m
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://localhost:9094
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9092,OUTSIDE://127.0.0.1:9094
       KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9094
       KAFKA_ADVERTISED_HOSTNAME: INSIDE
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - misis-local
+
+
+networks:
+  misis-local:
